# cpp-thd-2021-12-06

./: .gitignore  README.md
_exercises/logger/: logger_ex.cpp
_exercises/monte-carlo-pi/: CMakeLists.txt  pi.cpp
_exercises/synchronization/: CMakeLists.txt  bank_account.cpp  krystian.cpp
_exercises/thread-safe-queue/: CMakeLists.txt
_exercises/thread-safe-queue/src/: CMakeLists.txt  thread_safe_queue.hpp
_exercises/thread-safe-queue/tests/: CMakeLists.txt  thread_safe_queue_tests.cpp
_exercises/thread-safe-queue/tests/catch/: CMakeLists.txt
event-synchronization/: CMakeLists.txt  main.cpp
futures/: main.cpp
jthread/: CMakeLists.txt  joining_threads.cpp
pi-benchmarking/: CMakeLists.txt  pi_monte_carlo.cpp
ref-counter/: CMakeLists.txt  atomic_ref_counting.cpp
synchronization/: CMakeLists.txt  main.cpp
thread-pool/: function_wrapper.hpp  main.cpp  thread_safe_queue.hpp
threads/: joining_thread.hpp  main.cpp
threads-exceptions/: main.cpp
tls/: CMakeLists.txt  thread_local_storage.cpp
